<resources>
    <string name="app_name">CanonBallGame</string>

    <!-- Main Menu -->
    <string name="menu_level_label">Choose a level</string>
    <string name="menu_level_1_btn">1</string>
    <string name="menu_level_2_btn">2</string>
    <string name="menu_level_3_btn">3</string>
    <string name="menu_level_4_btn">4</string>
    <string name="menu_level_5_btn">5</string>
    <string name="menu_options_btn">Options</string>
    <string name="menu_level_header">Choose Level:</string>
    <string name="menu_play_btn">Play!</string>

    <!-- Help Menu -->
    <string name="help_title">How to play:</string>
    <string name="help_instructions">1. This is some text explaining how the game works.\n
        2. This is some text explaining how the game works.\n
        3. This is some text explaining how the game works.\n
        4. This is some text explaining how the game works.</string>

    <!-- About Menu -->
    <string name="about_title">Candidate Number</string>
    <string name="about_candidate_number">028016</string>

    <!-- Game mechanics -->
    <string name="time_remaining">Time remaining: %d seconds</string>
    <string name="game_score">Score: %d </string>

    <string name="title_activity_cannon_ball">CannonBallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
