<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="#0099cc"-->
    <!--tools:context="com.example.leon.canonballgame.MainMenu">-->

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0099cc"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cannonball_logo"
            android:layout_weight="0.6" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/menu_level_header"
            android:textSize="50sp"
            android:layout_weight="0.16" />

        <RadioGroup
            android:id="@+id/menu_toggle_btn_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/menu_lvl_1_btn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#3079ab"
                android:fontFamily="casual"
                android:onClick="onToggle"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textOff="@string/menu_level_1_btn"
                android:textOn="@string/menu_level_1_btn"
                android:textSize="50sp" />

            <ToggleButton
                android:id="@+id/menu_lvl_2_btn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#3079ab"
                android:fontFamily="casual"
                android:onClick="onToggle"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textOff="@string/menu_level_2_btn"
                android:textOn="@string/menu_level_2_btn"
                android:textSize="50sp" />

            <ToggleButton
                android:id="@+id/menu_lvl_3_btn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#3079ab"
                android:fontFamily="casual"
                android:onClick="onToggle"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textOff="@string/menu_level_3_btn"
                android:textOn="@string/menu_level_3_btn"
                android:textSize="50sp" />

            <ToggleButton
                android:id="@+id/menu_lvl_4_btn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#3079ab"
                android:fontFamily="casual"
                android:onClick="onToggle"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textOff="@string/menu_level_4_btn"
                android:textOn="@string/menu_level_4_btn"
                android:textSize="50sp" />

            <ToggleButton
                android:id="@+id/menu_lvl_5_btn"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#3079ab"
                android:fontFamily="casual"
                android:onClick="onToggle"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textOff="@string/menu_level_5_btn"
                android:textOn="@string/menu_level_5_btn"
                android:textSize="50sp" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:background="@android:color/holo_red_dark"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/menu_play_btn"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.24">

            <ImageButton
                android:id="@+id/menu_about_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="#0099cc"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true" />

            <ImageButton
                android:id="@+id/menu_help_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="#0099cc"
                app:srcCompat="@android:drawable/ic_menu_help"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

<!--</FrameLayout>-->